# ATLAS

./: README.md  pyproject.toml  setup.py
examples/: download-data.sh  gen-data-files.py  support.py
examples/apan/: apan.py  async_trainer.py  train.py
examples/jodie/: async_trainer.py  jodie.py  train.py
examples/tgat/: async_pipeline_train.py  async_pipeline_train_cuda_graph.py  async_train.py  async_trainer.py  tgat.py  train.py
examples/tgn/: async_trainer.py  tgn.py  train.py
experiments/: README.md
experiments/distributed_proxy/: README.md  run_train_matrix.py  summarize_runs.py  train_matrix_distributed_proxy.json
experiments/launch_overhead/: README.md  cuda_launch_overhead_multimethod.cu
include/atlas/: core.h  fixed_sampler.h  sampler.h  tcsr.h  utils.h
lib/: bind.cpp  fixed_sampler.cpp  recover_kernel.cu  sampler.cpp  tcsr.cpp  utils.cpp
python/atlas/: __init__.py  _batch.py  _block.py  _core.py  _cpublock.py  _frame.py  _gpublock.py  _graph.py  _memory.py  _sampler.py  _utils.py  nn.py  nn_layers.py  op.py
test/python/: print_fixed_sampler_demo.py  test_fixed_sampler.py
