[project]
name = "atlas"
version = "0.0.1"
description = "ATLAS: Asynchronous Temporal Latency-Aware System"
requires-python = ">=3.12"
dependencies = [
  # "torch>=2.2",
]

[tool.setuptools.packages.find]
where = ["python"]
include = ["atlas*"]
namespaces = false

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
